Adds separation from menu and content

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
 <div class="menu-button">Menu</div>
-    <nav  class="nav" style="max-width: 960px; margin: 0 auto; ">
+    <nav  class="nav" style="max-width: 960px; margin: 0 auto; padding-bottom: 2em; ">
         {% comment %}
         Menu from http://www.cssscript.com/multi-level-toggle-responsive-navigation-menu-using-pure-css/
         To create the menu, we keep track of the old path
