--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,13 @@
 <header class="site-header" style="background: #272676">
-    <div class="wrapper">
-        <div style="max-width: 960px; display: inline-flex; white-space: nowrap;" id="headerimg"> 
-            <div style="height: auto;"> 
-                <a href="/">
-                    <img alt="Olimpíadas Científicas" src="{{"/static/images/olimpiadascientificas.png"| | prepend: site.baseurl}}"> 
-                </a>
-            </div>
-            <div style="" id="height: auto;">
+    <div style="max-width: 960px; margin-right: auto;  margin-left: auto;">
+        <div style="    display: inline-flex;  padding-top:10px;" id="headerimg"> 
+            <a href="/">
+                <img alt="Olimpíadas Científicas" src="{{"/static/images/olimpiadascientificas.png"| | prepend: site.baseurl}}"> 
+            </a>
+            <div class="boneco-oc" style="margin-left:25px;">
                 <img src="{{ "/static/images/bonecooc.png" | prepend: site.baseurl }}">
-            </div>    
-        </div>
+            </div>  
+        </div>      
     </div>
 </header>
 
