--- a/_includes/sitemap.html
+++ b/_includes/sitemap.html
@@ -1,91 +1,103 @@
 <div  class="nav" style="max-width: 960px; margin: 0 auto; padding-bottom: 2em; ">
-        {% comment %}
-        Menu from http://www.cssscript.com/multi-level-toggle-responsive-navigation-menu-using-pure-css/
-        To create the menu, we keep track of the old path
-        then we compare to the new path. We compare them and see how many matches there are
-        For every unmatched part of the old path we close an ul tag
-        for every unmatched part of the new path, we add an ul tag
-        To ignore the file itself we use forloop.last
-        And {% else %}
-        and 
-        forloop.first
-        {% endcomment %}
-        <ul  data-breakpoint="800">
-        {% assign old_node_url_parts = [] %}
-        {% assign node_url_parts = [] %}
-        {% assign close_li = false %}
-        {% assign sorted_pages = site.pages | sort:"dir" %}
-        {% assign is_first = true%}
-        {% for node in sorted_pages %}
-            {% if node.title %}
-                {% assign node_url_parts = node.url | split: '/' %}
-                {% assign node_url_parts_size = node_url_parts | size %}
-                {% if is_first %}
-                    {% if node_url_parts_size == 2%}    {% comment %}  This is a hack  {% endcomment %}
-                        <li>
-                        <a href="{{node.url}}">{{node.title}}</a>
-                        {% assign is_first = false %}
-                        {% assign old_node_url_parts = node_url_parts %}
-                        {% assign old_node_url_parts_size = node_url_parts_size %}
-                    {% elsif node_url_parts_size >= 2 %}
-                        {% for p in node_url_parts %}
-                            {% if forloop.first %}
-                               {% continue %}
-                            {% elsif forloop.last%}
-                                {% continue %}
-                            {% else %}
-                            	    <li><a href="#">{{p| replace: '%c3%ad', 'í'| replace: '%c3%a1', 'á'  | replace: '%C3%AD', 'í'| replace: '%C3%A1', 'á' |  replace: '%C3%A3', 'ã' | replace: '%C3%B3', 'ó'}}</a>
-                                    <ul>
-                            {% endif %}
-                        {% endfor %}
-                        <li>
-                        <a href="{{node.url}}">{{node.title}}</a>
-                        {% assign is_first = false %}
-                        {% assign old_node_url_parts = node_url_parts %}
-                        {% assign old_node_url_parts_size = node_url_parts_size %}
-                    {% endif %}
-                {% else %}
-                	{% if node_url_parts_size >= 2 %}
-                    	{% for p in old_node_url_parts %}
-                            {% if node_url_parts contains p %}
-                                {% continue %}
-                            {% else %}
-                                {% if forloop.last %}
-                                    </li>
-                                {% else %}
-                                    </ul>
-                                    </li>
-                                {% endif %}
-                            {% endif %}
-                        {% endfor %}
-                        
-                        {% for p in node_url_parts %}
-                            {% if old_node_url_parts contains p %}
-                            	{% if forloop.index == old_node_url_parts_size %}
-                                    <ul> 
-                                {% else %}
-            	                    {% continue %}
-            	                {% endif %}
-                            {% else %}
-                                {% if forloop.last%}
-            	                    {% continue %}
-                                {% else %}
-                                	<li><a href="#">{{p| capitalize | replace: '%c3%ad', 'í'| replace: '%c3%a1', 'á' | replace: '%C3%AD', 'í'| replace: '%C3%A1', 'á' |  replace: '%C3%A3', 'ã' | replace: '%C3%B3', 'ó'}}</a>
-                                    <ul>
-                                {% endif %}
-                            {% endif %}
-                        {% endfor %}
-                        <li>
-                        {% if node.ignorelink %}
-                            <a href="#">{{node.title}}</a>
+    {% comment %}
+    Menu from http://www.cssscript.com/multi-level-toggle-responsive-navigation-menu-using-pure-css/
+    To create the menu, we keep track of the old path
+    then we compare to the new path. We compare them and see how many matches there are
+    For every unmatched part of the old path we close an ul tag
+    for every unmatched part of the new path, we add an ul tag
+    To ignore the file itself we use forloop.last
+    And {% else %}
+    and 
+    forloop.first
+    {% endcomment %}
+    <ul  data-breakpoint="800">
+    {% assign old_node_url_parts = [] %}
+    {% assign node_url_parts = [] %}
+    {% assign close_li = false %}
+    {% assign sorted_pages = site.pages | sort:"dir" %}
+    {% assign is_first = true%}
+    {% for node in sorted_pages %}
+        {% if node.title %}
+            {% assign node_url_parts = node.url | split: '/' %}
+            {% assign node_url_parts_size = node_url_parts | size %}
+            {% if is_first %}
+                {% if node_url_parts_size == 2%}    {% comment %}  This is a hack  {% endcomment %}
+                    <li>
+                    <a href="{{node.url}}">{{node.title}}</a>
+                    {% assign is_first = false %}
+                    {% assign old_node_url_parts = node_url_parts %}
+                    {% assign old_node_url_parts_size = node_url_parts_size %}
+                {% elsif node_url_parts_size >= 2 %}
+                    {% for p in node_url_parts %}
+                        {% if forloop.first %}
+                           {% continue %}
+                        {% elsif forloop.last%}
+                            {% continue %}
                         {% else %}
-                            <a href="{{node.url}}">{{node.title}}</a>
+                        	    <li><a href="#">{{p| replace: '%c3%ad', 'í'| replace: '%c3%a1', 'á'  | replace: '%C3%AD', 'í'| replace: '%C3%A1', 'á' |  replace: '%C3%A3', 'ã' | replace: '%C3%B3', 'ó'}}</a>
+                                <ul>
                         {% endif %}
-                        {% assign old_node_url_parts = node_url_parts %}
-                        {% assign old_node_url_parts_size = node_url_parts_size %}
+                    {% endfor %}
+                    <li>
+                    <a href="{{node.url}}">{{node.title}}</a>
+                    {% assign is_first = false %}
+                    {% assign old_node_url_parts = node_url_parts %}
+                    {% assign old_node_url_parts_size = node_url_parts_size %}
+                {% endif %}
+            {% else %}
+            	{% if node_url_parts_size >= 2 %}
+            	    {% assign same-menu = true %}
+                	{% for p in old_node_url_parts %}
+                        {% if node_url_parts contains p %}
+                            {% continue %}
+                        {% else %}
+                            {% if same-menu %}
+                                </li>
+                                {% assign same-menu = false %}
+                            {% else %}
+                                </ul>
+                                </li>
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                    
+                    {% for p in node_url_parts %}
+                        {% if old_node_url_parts contains p %}
+                        	{% if forloop.index == old_node_url_parts_size %}
+                                <ul> 
+                            {% else %}
+        	                    {% continue %}
+        	                {% endif %}
+                        {% else %}
+                            {% if forloop.last%}
+        	                    {% continue %}
+                            {% else %}
+                            	<li><a href="#">{{p| capitalize | replace: '%c3%ad', 'í'| replace: '%c3%a1', 'á' | replace: '%C3%AD', 'í'| replace: '%C3%A1', 'á' |  replace: '%C3%A3', 'ã' | replace: '%C3%B3', 'ó'}}</a>
+                                <ul>
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                    <li>
+                    {% if node.ignorelink %}
+                        <a href="#">{{node.title}}</a>
+                    {% else %}
+                        <a href="{{node.url}}">{{node.title}}</a>
                     {% endif %}
+                    {% assign old_node_url_parts = node_url_parts %}
+                    {% assign old_node_url_parts_size = node_url_parts_size %}
                 {% endif %}
             {% endif %}
+        {% endif %}
+    {% endfor %}
+     {% assign same-menu = true %}
+    	{% for p in old_node_url_parts offset:1%}
+            {% if same-menu %}
+                </li>
+                {% assign same-menu = false %}
+            {% else %}
+                </ul>
+                </li>
+            {% endif %}
         {% endfor %}
-      </ul>
-    </nav> 
+  </ul>
+</div> 
