--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,11 @@ layout: compress
 {% include head.html %}
 <body>
   {% include header.html %}
-{% include  menu.html %}
+  {% if site.auto-menu %}
+    {% include  menu.html %}
+  {% else %}
+    {% include  fast-menu.html %}
+  {% endif %}
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
