--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,7 +14,8 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+    /**font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;*/
+    font-family:  $base-font-family;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
@@ -24,6 +25,7 @@ body {
     font-feature-settings: "kern" 1;
     font-kerning: normal;
 }
+
 
 
 
@@ -37,6 +39,9 @@ ul, ol, dl, figure,
     margin-bottom: $spacing-unit / 2;
 }
 
+h1,h2,h3{
+font-family: Georgia,Sans-Serif,Verdana;
+}
 
 
 /**
