--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: Arial,Verdana,Tahoma;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -50,5 +50,6 @@ $on-laptop:        800px;
         "base",
         "layout",
         "syntax-highlighting",
-        "flexnav"
+	"sm-simple",
+	"sm-core-css"
 ;
