--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,12 +7,9 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li>{{ site.info }}</li>
+          <li>{{ site.copyright }}</li>
         </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -27,7 +24,6 @@
           {% endif %}
         </ul>
       </div>
-
       <div class="footer-col footer-col-3">
         <p>{{ site.description }}</p>
       </div>
