You can now create posts

--- a/css/main.scss
+++ b/css/main.scss
@@ -51,5 +51,6 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting",
 	"sm-simple",
-	"sm-core-css"
+	"sm-core-css",
+	"pagination"
 ;
