--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,21 @@ layout: default
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
   </header>
-
+      <div class="post-image">
+        {% if page.image %}
+          {% if page.image contains "//" %}
+            {% capture thumbnail %}{{ page.image }}{% endcapture %}
+          {% else %}
+            {% capture thumbnail %}{{ page.image  | prepend: site.mediaurl | prepend: site.baseurl }}{% endcapture %}
+          {% endif %}
+          <img class="img-center" src="{{ thumbnail }}">
+        {% else %}
+          <h1 class="poorman-thumbnail"
+              style="background: {% cycle 'c': "#48c", "#fa4", "#5b5", "#d54" %};">
+            {{ post.title | truncate: 1, '' }}
+          </h1>
+        {% endif %}
+        </div>
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
