Makes all js local. Fixes the calendar. Fixes oibf equipe

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,4 +1,4 @@
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"	></script>
 <script src="{{ "/js/jquery.smartmenus.js" | prepend: site.baseurl }}"	></script>
 <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 
