Fixes calendario. Fixes twitter and githyub link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,12 @@
         </ul>
       </div>
       <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
+       <ul>
+        <li>
+         <p>{{ site.description }}</p>
+        </li>
+        {% include parceiros.html %}
+       </ul>
       </div>
     </div>
 
