Displays posts from NOIC and obmepeiros

--- a/css/main.scss
+++ b/css/main.scss
@@ -52,5 +52,6 @@ $on-laptop:        800px;
         "syntax-highlighting",
 	"sm-simple",
 	"sm-core-css",
-	"pagination"
+	"pagination",
+	"custom"
 ;
