Add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ layout: compress
 
     {% include footer.html %}
     {% include js.html %}
-
+    {% include google-analytics.html %}
   </body>
 
 </html>
