--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -34,6 +34,7 @@ a.rss-item{
 .rss-box-noic, .rss-box-obmepeiros{
     box-shadow: 0px 2px 10px rgba(0, 0, 0, .5);
     padding: 10px;
+    margin-top: 20px;
 }
 
 
