--- a/_layouts/olimpiada.html
+++ b/_layouts/olimpiada.html
@@ -4,8 +4,10 @@ layout: default
 <article class="olimpiada">
   <h1 class="post-title">{{ page.title }}</h1>
   <header class="olimpiada-header">
-  <img src="{{ site.baseurl }}/static/images/{{page.image}}" alt="{{page.title}}" style="margin: auto; display: block;">
-    <h1 style="text-align: center"><strong><a href="{{page.link}}">{{page.fullname}}</a></strong></h1>
+  <a href="{{page.link}}">
+    <img src="{{ site.baseurl }}/static/images/{{page.image}}" alt="{{page.title}}" style="margin: auto; display: block;">
+    <h1 style="text-align: center"><strong>{{page.fullname}}</strong></h1>
+    </a>
   </header>
   <div class="olimpiada-content">
     {{ content }}
