Fixes OBAP. Adds warning to olimpiadas pages

--- a/_layouts/olimpiada.html
+++ b/_layouts/olimpiada.html
@@ -4,6 +4,11 @@ layout: default
 <article class="olimpiada">
   <h1 class="post-title">{{ page.title }}</h1>
   <header class="olimpiada-header">
+   <div class="warning">
+    <h3>
+      Esta página não é atualizada desde 2015. <br>Acesse a <a href="{{page.link}}"> página oficial da competição </a> ou a <a href="https://pt.wikipedia.org/wiki/Olimp%C3%ADadas_de_Conhecimento"> wikipedia </a> para as informações mais recentes.
+    </h3>
+  </div>
   <a href="{{page.link}}">
     <img src="{{ site.baseurl }}/static/images/{{page.image}}" alt="{{page.title}}" style="margin: auto; display: block;">
     <h1 style="text-align: center"><strong>{{page.fullname}}</strong></h1>
