Comments on estudo física

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,5 +10,8 @@ layout: default
   <div class="post-content">
     {{ content }}
   </div>
-
 </article>
+{% if page.comments %}
+{% include comments.html %}
+{% endif %}
+
