--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -31,7 +31,7 @@ a.rss-item{
 
 
 
-.rss-box-noic, .rss-box-obmepeiros .rss-box-obm{
+.rss-box-noic, .rss-box-obmepeiros, .rss-box-obm{
     box-shadow: 0px 2px 10px rgba(0, 0, 0, .5);
     padding: 10px;
     margin-top: 20px;
