--- a/_sass/sm-simple.scss
+++ b/_sass/sm-simple.scss
@@ -1,6 +1,6 @@
 /* line 124, ../sass/_sm-simple.scss */
 .sm-simple {
-  border: 1px solid #3c3cac;
+/*  border: 1px solid #3c3cac;*/
   background: #141439;
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -48,9 +48,9 @@
   content: '-';
 }
 /* line 178, ../sass/_sm-simple.scss */
-.sm-simple li {
+/* .sm-simple li {
   border-top: 1px solid rgba(255, 255, 255, 0.05);
-}
+}/*
 /* line 181, ../sass/_sm-simple.scss */
 .sm-simple > li:first-child {
   border-top: 0;
